@@ -6,6 +6,7 @@ Changes for 1.9
 
 Changes for 1.8.3
 
+ - [ZBXNEXT-321] decreased number of select's from DB while processing trends data (Sasha)
  - [ZBX-1505] fixed user macros not resolved in frontend (Vedmak)
  - [ZBX-1902] fixed some possibilities to create incorrect linkage (Vedmak)
  - [ZBX-2386] rows per page limit increased (Vedmak)
